Fix jumping height on sidebar, scrollbar on tab panels

--- a/src/app/water-process-diagram/water-process-diagram.component.css
+++ b/src/app/water-process-diagram/water-process-diagram.component.css
@@ -4,7 +4,7 @@
 }
 
 .water-process-diagram-container div#waterProcessDiagramFooter.footer {
-    position: relative;
+    /* position: relative; */
 }
 
 .water-process-diagram .btn-primary{
